# DataHubClient

./: .gitattributes  .gitignore  AGENTS.md  DataHubClient.Integration.slnx  DataHubClient.Tests.slnx  DataHubClient.slnx  LICENSE  README.md  RELEASE_NOTES.md  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.config/: dotnet-tools.json
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  post-create.sh
.github/workflows/: ci.yml  integration.yml
docs/: getting-started.md  index.md  reference.md
docs/fsdocs/: index.md
docs/samples/getting-started/: sample.fsx  sample.mjs  sample.py
plans/: docs.md  mvp.md  validation-api.md
src/DataHubClient/: DataHubClient.Javascript.fsproj  DataHubClient.Python.fsproj  DataHubClient.fs  DataHubClient.fsproj  Version.fs  __init__.py  package.json  pyproject.toml
src/DataHubClient.Core/: DataHubClient.Core.Compile.props  DataHubClient.Core.Javascript.fsproj  DataHubClient.Core.Python.fsproj  DataHubClient.Core.fsproj  DataHubClient.fs  Library.fs  pyproject.toml
src/DataHubClient.Core/Http/: Authentication.fs  DotNetHttpClient.fs  HttpRequest.fs  HttpResponse.fs  IHttpClient.fs
src/DataHubClient.Core/Json/: Branch.fs  Commit.fs  (+5 more)
src/DataHubClient.DotNet/: DataHubClient.DotNet.fs  DataHubClient.DotNet.fsproj
src/DataHubClient.JavaScript/: DataHubClient.JavaScript.fs  DataHubClient.JavaScript.fsproj  FetchHttpClient.fs  package.json
src/DataHubClient/Http/: Authentication.fs  HttpRequest.fs  HttpxHttpClient.fs  IHttpClient.fs
src/DataHubClient/Json/: Issue.fs  RepoFile.fs  ThothExtensions.fs  User.fs  ValidationSummary.fs
src/DataHubClient/Models/: Branch.fs  Commit.fs  MergeRequest.fs  Note.fs  User.fs  ValidationPackageRef.fs  ValidationSummary.fs
src/DataHubClient/Resources/: FilesApi.fs  IssuesApi.fs  MergeRequestsApi.fs  PackagesApi.fs  ProjectsApi.fs  RepositoryApi.fs  ResourceHelpers.fs  ValidationApi.fs
tests/DataHubClient.DotNet.Tests/: DataHubClient.DotNet.Tests.fsproj  DataHubClientDotNetTests.fs  DataHubClientTests.fs  DotNetHttpClientTests.fs  FakeHttpMessageHandler.fs  Program.fs
tests/DataHubClient.Integration.JavaScript.Tests/: DataHubClient.Integration.JavaScript.Tests.fsproj
tests/DataHubClient.Integration.Python.Tests/: DataHubClient.Integration.Python.Tests.fsproj  Program.fs
tests/DataHubClient.Integration.Tests/: DataHubClient.Integration.Tests.fsproj  IntegrationTests.fs  LiveConfig.fs  README.md
tests/DataHubClient.JavaScript.Tests/: DataHubClient.JavaScript.Tests.fsproj  FetchHttpClientTests.fs  Program.fs  TranspileShapeTests.fs
tests/DataHubClient.Python.Tests/: DataHubClient.Python.Tests.fsproj  HttpxHttpClientTests.fs  Program.fs  TranspileShapeTests.fs
tests/DataHubClient.Tests/: AuthenticationTests.fs  DataHubClient.Tests.fsproj  Library.fs  ModelTests.fs  Program.fs  ResourceTests.fs  TestHelpers.fs  TestJson.fs
(+18 files in other folders)
