[project]
name = "datahub-client"
version = "0.2.0"
description = "A polyglot client library for ARC DataHubs — Python distribution."
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fable-library==5.0.0",
    "httpx>=0.27",
]
keywords = ["ARC", "DataPLANT", "nfdi4plants", "GitLab", "DataHub"]

[project.urls]
Homepage = "https://github.com/nfdi4plants/DataHubClient"
Repository = "https://github.com/nfdi4plants/DataHubClient.git"

# Mirrors ARCtrl's Python build: the hand-written src/DataHubClient/__init__.py
# lives next to the .fs sources, Fable transpiles into src/DataHubClient/py/ on
# every build, and the `packages` mapping below renames the source dir to
# `datahub_client/` inside the wheel so relative imports resolve at install time.
# `include` force-pulls the Fable output even though src/DataHubClient/py/ is
# .gitignored (it's a regenerated build artifact).
[tool.poetry]
include = [
    { path = "src/DataHubClient/py/**/*.py", format = ["sdist", "wheel"] },
]
packages = [
    { include = "**/*.py", from = "src/DataHubClient/", to = "datahub_client" },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# `uv run` / `uv sync` should not editable-install this project: the dev tests
# operate on Fable's separately-transpiled `dist/py-tests/` output, not on an
# installed `datahub_client`, so an editable install adds nothing and would
# fail at sync time before Fable has produced `src/DataHubClient/py/`.
[tool.uv]
package = false
