# PyPI distribution metadata for the Fable Python build of DataHubClient.
# The npm counterpart is package.json in this directory; both are templates
# consumed by the Stage 7 packaging pipeline, which transpiles the library to dist/py
# and builds the wheel from there. The uv-managed dev/test environment is the
# separate pyproject.toml at the repository root.
[project]
name = "datahub-client"
version = "0.0.0"
description = "A polyglot client library for ARC DataHubs — Python distribution."
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fable-library==5.0.0",
    "httpx>=0.27",
]
keywords = ["ARC", "DataPLANT", "nfdi4plants", "GitLab", "DataHub"]

[project.urls]
Homepage = "https://github.com/nfdi4plants/DataHubClient"
Repository = "https://github.com/nfdi4plants/DataHubClient.git"
